--- a/TODO
+++ b/TODO
@@ -3,3 +3,13 @@
 * Renaming files without white-space
 * ogg default encoding?
 * auto-select ogg encoding if mp3 lame is not available
+* version numbering
+
+later
+* debian packet
+* think about where to save which configuration options (maybe ~/.fadecut/* ?)
+* history/statistics
+* cross correlation with well known ad files
+* maybe we could use ffmpeg instead of sox/lame 
+
+
