--- a/TODO
+++ b/TODO
@@ -3,11 +3,13 @@
 * tinu  Renaming files without white-space
 * marco ogg default encoding?
 * marco auto-select ogg encoding if mp3 lame is not available
-* team  to discuss, version numbering, may be usful information for debian packaging
+* team  to discuss, version numbering, may be usful information 
+	for debian packaging
+* marco think about where to save which configuration 
+	options (maybe ~/.fadecut/* ?)
 
 later
 * ?     debian packet
-* ?     think about where to save which configuration options (maybe ~/.fadecut/* ?)
 * tinu  history/statistics
 * tinu  cross correlation with well known ad files
 * tinu  maybe we could use ffmpeg instead of sox/lame 
