--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This file is part of fadecut
-http://url
+https://github.com/micressor/fadecut
 
 fadecut is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -14,6 +14,8 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with fadecut.  If not, see <http://www.gnu.org/licenses/>.
 
+--- Overview -------------------------------------------------------------------
+Fadecut is managing ...
 
 --- Requirements ---------------------------------------------------------------
 * bash, The GNU Bourne Again SHell
