fix some errors at manpage file

--- a/fadecut.1
+++ b/fadecut.1
@@ -1,5 +1,5 @@
 ." Set the title
-.TH fadecut sound
+.TH fadecut 1
 ." Add a header for the name section
 .SH NAME
 fadecut - ripping live streams, tagging and converting it to mp3 or ogg
