more fixes at manpage

--- a/fadecut.1
+++ b/fadecut.1
@@ -1,5 +1,5 @@
 ." Set the title
-.TH fadecut 1
+.TH "fadecut" "1" "0.0.1"
 ." Add a header for the name section
 .SH NAME
 fadecut - ripping live streams, tagging and converting it to mp3 or ogg
@@ -34,12 +34,10 @@ Stream (and rip), start streamripper
 .PP
 .B -v
 Verbose
-
 .SH FILES
 https://github.com/micressor/fadecut
 .SH EXAMPLE
 ."Add some formatted text
-.nf
+.PP
 fadecut -p chillout -s
 ." End the formatted text
-.fi
