Documentation update. improve build process.

--- a/fadecut.1
+++ b/fadecut.1
@@ -1,6 +1,6 @@
 .TH "fadecut" "1" "0.0.1"
 .SH NAME
-fadecut - ripping live streams, tagging and converting it to mp3 or ogg
+fadecut - Radio livestream to ogg/mp3 tool
 .SH SYNOPSIS
 fadecut -p [
 .I profile
@@ -8,7 +8,12 @@ fadecut -p [
 .I OPTIONS
 ]
 .SH DESCRIPTION
-ripping live streams, tagging and converting it to mp3 or ogg
+This script handle mp3 files (-ripped by streamripper), fade in and            
+out. It set stream tags: artist, title and your own decided genre.             
+If you have songs you do not like, move the ripped file to dontlike/ folder,
+so fadecut will no longer convert this song, if it was read on the livestream. 
+All processed files of fadecut are in new/ folder. The original files from     
+streamripper are in the orig/ folder after processing. 
 .SH OPTIONS
 .B -d
 Debug: -d 0|1|2|3 (level 0 is standard, -d without number is like 1)
@@ -20,7 +25,7 @@ Show this message
 Method <sox|cutmp3>
 .PP
 .B -p
-Profile <pop|chillout>
+Profile <profilename>
 .PP
 .B -q
 Quiet
