--- a/README
+++ b/README
@@ -15,7 +15,12 @@ You should have received a copy of the GNU General Public License
 along with fadecut.  If not, see <http://www.gnu.org/licenses/>.
 
 --- Overview -------------------------------------------------------------------
-Fadecut is managing ...
+ This script handle mp3 files (-ripped by streamripper), fade in and            
+ out. It set stream tags: artist, title and your own decided genre.             
+ If you have songs you do not like, move the ripped file to dontlike/ folder,    so fadecut will no longer convert this song, if it was read on the livestream. 
+ All processed files of fadecut are in new/ folder. The original files from     
+ streamripper are in the orig/ folder after processing. 
+
 
 --- Requirements ---------------------------------------------------------------
 * bash, The GNU Bourne Again SHell
