new method split implemented, works better than cut

--- a/fadecut.1
+++ b/fadecut.1
@@ -12,7 +12,7 @@ This script handle mp3 files (-ripped by streamripper), fade in and
 out. It set stream tags: artist, title and your own decided genre.             
 If you have songs you do not like, move the ripped file to dontlike/ folder,
 so fadecut will no longer convert this song, if it was read on the livestream. 
-All processed files of fadecut are in new/ folder. The original files from     
+All processed files of fadecut are in new/ folder. The original files of     
 streamripper are in the orig/ folder after processing. 
 .SH OPTIONS
 .B -d
@@ -22,7 +22,7 @@ Debug: -d 0|1|2|3 (level 0 is standard, -d without number is like 1)
 Show this message
 .PP
 .B -m
-Method <sox|cutmp3>
+Method <sox|cut|split>
 .PP
 .B -p
 Profile <profilename>
