--- a/TODO
+++ b/TODO
@@ -21,7 +21,8 @@ along with fadecut.  If not, see <http://www.gnu.org/licenses/>.
 * marco auto-select ogg encoding if mp3 lame is not available
 * team  to discuss, version numbering, may be usful information 
 	for debian packaging
-
+* marco Testframework, which will auto-test all ENCODING and METHOD's, before
+	releasing.
 
 # ---- later -------------------------------------------------------------------
 * ?     debian packet
