Add create|edit profile feature.

--- a/fadecut.1
+++ b/fadecut.1
@@ -15,6 +15,12 @@ so fadecut will no longer convert this song, if it was read on the livestream.
 All processed files of fadecut are in new/ folder. The original files of     
 streamripper are in the orig/ folder after processing. 
 .SH OPTIONS
+.B -c
+Create a new profile <profilename>
+.PP
+.B -e
+Edit an existing profile <profilename>
+.PP
 .B -d
 Debug: -d 0|1|2|3 (level 0 is standard, -d without number is like 1)
 .PP
