added note about renaming filenames with umlaut using convmv

--- a/TODO
+++ b/TODO
@@ -38,3 +38,6 @@ lltag --yes -g SwissPop -c "Radio Swiss Pop" *.mp3
 to change filenames according to tags:
 lltag --rename "%a_-_%t" --rename-min --rename-sep _ --yes *.mp3
 
+to change filenames with iso-8859 umlaut to utf8:
+convmv -f iso-8859-15 -t utf8 -r *.mp3 --notest
+
