--- a/fadecut.1
+++ b/fadecut.1
@@ -28,7 +28,7 @@ Debug: -d 0|1|2|3 (level 0 is standard, -d without number is like 1)
 Show this message
 .PP
 .B -m
-Method <sox|cut|split>
+Method <sox|split>
 .PP
 .B -p
 Profile <profilename>
