--- a/README
+++ b/README
@@ -17,9 +17,28 @@ along with fadecut.  If not, see <http://www.gnu.org/licenses/>.
 
 --- Overview -------------------------------------------------------------------
 synopsis/short description: 
+---------------------------
 toolset to rip audiostreams, cut, fade in/out and tag the resulting audiofiles
 
-long description:
+long description (english):
+---------------------------
+fadecut is a script to rip audio files from a livestream and to process them 
+automatically. Beginning and ending fo the audio files will be cut and faded 
+in/out. So logos and advertising of radio stations will be automatically removed.
+
+In streaming mode fadecut is ripping audio files using streamripper. The 
+downloaded audio files are cutted using silence detection and then faded in and 
+out. Subsequently, the files are encoded to either ogg or mp3 and tagged with 
+tags (title, artist, genre and comment provided).
+
+In file mode fadecut is just processing already ripped audio files.
+
+An audio file which has already been processed is detected and will not be 
+processed again. Not desired songs can be stored in a separate directory. This 
+files are not processed anymore too.
+
+long description (german):
+--------------------------
 mit fadecut können Audio Dateien aus einem Livestream gerippt und automatisch 
 verarbeitet werden. Anfang und Ende der Audiofiles werden geschnitten sowie ein-
 und ausgeblendet. Damit können Signete und Werbung von Radiostationen automatisch
