--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fadecut (0.0.1-2) UNRELEASED; urgency=low
+
+  * debian/control: Missed Depends: id3v2
+
+ -- Marco Balmer <marco@balmer.name>  Thu, 03 Feb 2011 15:58:26 +0100
+
 fadecut (0.0.1-1) unstable; urgency=low
 
   * Initial release (Closes: #611641)
