Added id3v2 to README

--- a/README
+++ b/README
@@ -67,7 +67,7 @@ optional, for mp3 encoding:
 
 
 --- Ubuntu ---------------------------------------------------------------------
-apt-get install bash coreutils findutils mp3info mp3splt nice sed sox libsox-fmt-mp3 streamripper vorbis-tools
+apt-get install bash coreutils findutils mp3info mp3splt nice sed sox libsox-fmt-mp3 streamripper vorbis-tools id3v2
 
 for mp3 encoding:
 apt-get install lame
@@ -75,7 +75,7 @@ apt-get install lame
 --- Debian ---------------------------------------------------------------------
 * lame (mp3 encoding) is official not available in debian.
 
-apt-get vorbis-tools sox libsox-fmt-mp3 streamripper mp3info mp3splt
+apt-get vorbis-tools sox libsox-fmt-mp3 streamripper mp3info mp3splt id3v2
 
 --- Usage ----------------------------------------------------------------------
 1. Create a profile file
