--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 fadecut (0.0.2-1) UNRELEASED; urgency=low
 
+  * New 0.0.2 upstream release
   * Adding missing Depends on id3v2
-  * Removed repetition of unnessesary logging
-  * Removed -m method
+  * Changed complete packaging to tiny (debian/*.install,examples,manpages)
 
  -- Marco Balmer <marco@balmer.name>  Thu, 03 Feb 2011 15:58:26 +0100
 
