stats, processed songs per hour

--- a/TODO
+++ b/TODO
@@ -22,6 +22,7 @@ along with fadecut.  If not, see <http://www.gnu.org/licenses/>.
         in debug mode: write how much files were splitted with mp3splt
 * marco -i -o options for custom input/output directories
 * tinu  dontlike/ folder + manpage documentation
+* marco stats, processed songs per hour
 
 # --- later --------------------------------------------------------------------
 * tinu  cross correlation with well known ad files
