--- a/fadecut.1
+++ b/fadecut.1
@@ -21,6 +21,12 @@ Create a new profile <profilename>
 .B \-e
 Edit an existing profile <profilename>
 .PP
+.B \-i
+optional input <directory>
+.PP
+.B \-o
+optional output <directory>
+.PP
 .B \-d
 Debug: \-d 0|1|2|3 (level 0 is standard, \-d without number is like 1)
 .PP
