--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+fadecut (0.0.3-1) UNRELEASED; urgency=low
+
+  * New 0.0.3 upstream release
+  * Changed debian/copyright according to DEP-5
+
+ -- Marco Balmer <marco@balmer.name>  Fri, 11 Feb 2011 10:13:43 +0100
+
 fadecut (0.0.2-1) unstable; urgency=low
 
   * New 0.0.2 upstream release
