--- a/fadecut.1
+++ b/fadecut.1
@@ -39,7 +39,7 @@ Profile <profilename>
 .B \-q
 Quiet
 .PP
-.B \-s
+.B \-r
 Stream (and rip), start streamripper
 .PP
 .B \-v
@@ -97,7 +97,7 @@ fadecut \-e test
 .PP
 Rip, cut and fade in\-/out with profile test
 .RS
-fadecut \-p test \-s
+fadecut \-p test \-r
 .RE
 .PP
 Only cut and fade in\-/out without ripping from livestream
