--- a/TODO
+++ b/TODO
@@ -23,3 +23,4 @@ along with fadecut.  If not, see <http://www.gnu.org/licenses/>.
 * tinu  cross correlation with well known ad files
 * tinu  maybe we could use ffmpeg instead of sox/lame 
 * marco stats, processed songs per hour
+* team  statistics reporting
