added man page documenation about folders

--- a/fadecut.1
+++ b/fadecut.1
@@ -8,12 +8,56 @@ fadecut \-p [
 .I OPTIONS
 ]
 .SH DESCRIPTION
-This script handle mp3 files (\-ripped by streamripper), fade in and            
-out. It set stream tags: artist, title and your own decided genre.             
-If you have songs you do not like, move the ripped file to dontlike/ folder,
-so fadecut will no longer convert this song, if it was read on the livestream. 
-All processed files of fadecut are in new/ folder. The original files of     
-streamripper are in the orig/ folder after processing. 
+fadecut is a script to rip audio files from a livestream (using streamripper) and
+to process them automatically. Beginning and ending fo the audio files will be 
+cut and faded in/out. So logos and advertising of radio stations will be 
+automatically removed.
+.PP
+In streaming mode fadecut is ripping audio files using streamripper. The
+downloaded audio files are cutted using silence detection and then faded in and
+out. Subsequently, the files are encoded to either ogg or mp3 and tagged with
+tags (title, artist, genre and comment provided).
+.PP
+In file mode fadecut is just processing already ripped audio files.
+.PP
+An audio file which has already been processed is detected and will not be
+processed again. Not desired songs can be stored in a separate directory. This
+files are not processed anymore too.
+.SH FOLDERS
+fadecut is working with some standard folders. You may change them in your
+profile or fadecutrc
+.PP
+.B done/
+here you put all your songs which were already processed by fadecut and which
+you want to keep. See also new/ folder.
+.PP
+.B dontlike/
+in this folder you may put songs which you don't like. Fadecut is checking this
+folder before it is processing new files in the working folder. Null size files
+are ok. 
+.PP
+.B double/
+fadecut creates null byte size files in this folder whenever it is processing a
+file which is already in done/ or new/ folder.
+.PP
+.B error/
+whenever an error occurs while fadecut is processing a file, that file is moved
+to the error folder for later examining.
+.PP
+.B incomplete/
+this folder is created by streamripper. All not fully ripped songs are saved 
+here.
+.PP
+.B new/
+processed songs are going here. Usually you may rip and process files with
+fadecut, they are going in to new/ folder, you listen to them and put good songs
+to the done/ folder.
+.PP
+.B orig/
+if you want to keep the original file (which is ripped by streamripper), you may
+use the \-k option. fadecut is putting the ripped files untouched into that
+folder.
+.PP
 .SH OPTIONS
 .B \-c
 Create a new profile <profilename>
