added description to TRIM variables

--- a/fadecut.1
+++ b/fadecut.1
@@ -111,12 +111,12 @@ Processed files will get the above comment.
 .PP
 TRIM_BEGIN=0
 .RS
-trim?
+cut <n> seconds off the file in the beginning.
 .RE
 .PP
 TRIM_END=0
 .RS
-trim?
+cut <n> seconds off the file at the end.
 .RE
 .PP
 FADE_IN=1
