--- a/TODO
+++ b/TODO
@@ -19,6 +19,7 @@ along with fadecut.  If not, see <http://www.gnu.org/licenses/>.
 	releasing.
 
 # --- later --------------------------------------------------------------------
+* tinu  change to getopt(1) to be able to parse --long-options
 * tinu  cross correlation with well known ad files
 * tinu  maybe we could use ffmpeg instead of sox/lame 
 * marco stats, processed songs per hour
