updated man page SEE ALSO

--- a/fadecut.1
+++ b/fadecut.1
@@ -9,9 +9,7 @@
 .SH NAME
 fadecut \- Radio livestream to ogg/mp3 tool
 .SH SYNOPSIS
-fadecut \-p [
-.I profile
-] [
+fadecut \-p <profile> [
 .I OPTIONS
 ]
 .SH DESCRIPTION
@@ -157,8 +155,7 @@ fadecut \-p test
 .RE
 .PP
 .SH SEE ALSO
-.Xr id3v2 1 ,
-.Xr streamripper 1
+\fBid3v2\fR(1), \fBoggenc\fR(1), \fBsox\fR(1), \fBstreamripper\fR(1)
 .PP
 .SH FILES
 .PD 0
