Update short description, version number and added lame (SEE ALSO).

--- a/fadecut.1
+++ b/fadecut.1
@@ -5,9 +5,9 @@
 .de FN
 \fI\|\\$1\|\fP
 ..
-.TH "fadecut" "1" "0.0.1"
+.TH "fadecut" "1" "0.1.0"
 .SH NAME
-fadecut \- Radio livestream to ogg/mp3 tool
+fadecut \- toolset to rip audiostreams, cut, fade in/out and tag the resulting audiofiles
 .SH SYNOPSIS
 fadecut \-p <profile> [
 .I OPTIONS
@@ -155,7 +155,8 @@ fadecut \-p test
 .RE
 .PP
 .SH SEE ALSO
-\fBid3v2\fR(1), \fBoggenc\fR(1), \fBsox\fR(1), \fBstreamripper\fR(1)
+\fBid3v2\fR(1), \fBoggenc\fR(1), \fBsox\fR(1), \fBstreamripper\fR(1),
+\fBlame\fR(1)
 .PP
 .SH FILES
 .PD 0
