--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 fadecut 0.1.0
 -------------
-  * Ripping option -s changed to -r
+  * ripping option -s changed to -r
+  * write log to ~/.fadecut/statslog.csv for statistics
+  * autoconverting tags from id3v1 to id3v2
+  * double files are now 0 byte size
+  * removed mp3info, now using sox to get information about audio file
+  * removed mp3splt, now using sox to split audio files
+  * improve shutdown behaviour. All exit codes and logging messages justified.
+  * added silence cutting. no more long silence at beginning and end of files.
 
 fadecut 0.0.2
 -------------
@@ -10,4 +17,4 @@ fadecut 0.0.2
 
 fadecut 0.0.1
 -------------
-  * Initial release
+  * initial release
