--- a/fadecut.1
+++ b/fadecut.1
@@ -7,7 +7,7 @@
 ..
 .TH "fadecut" "1" "0.1.0"
 .SH NAME
-fadecut \- toolset to rip audiostreams, cut, fade in/out and tag the resulting audiofiles
+fadecut \- Toolset to rip audiostreams, cut, fade in/out and tag the resulting audiofiles
 .SH SYNOPSIS
 fadecut \-p <profile> [
 .I OPTIONS
